# wasim-cpp

./: .gitignore  CMakeLists.txt  CMakeLists.txt.old  NOTE.txt  README.md  a  check.c  configure.sh  independence_check_test.cpp  inv_check1.cpp  main.cpp  prop_check1.cpp  smtlib_result3 copy.smt  smtlib_result3.smt  solver_test.cpp  sygus_1668083700966.sh  sygus_simplify_old.cpp  sygus_simplify_old.h  sygus_template_1668083498121.sygus  sygus_template_1668083583704.sygus  sygus_template_1668083596297.sygus  sygus_template_1668083700966.sygus  symsim_test.cpp  symtraverse_all_step1.cpp  symtraverse_all_step2.cpp  symtraverse_all_step3.cpp  symtraverse_all_step4.cpp
.bsp/: scala-cli.json
.metals/: metals.lock.db  metals.mv.db
.scala-build/: ide-inputs.json
.scala-build/.bloop/: wasim-cpp_bd2c96d2de-test.json  wasim-cpp_bd2c96d2de.json
apps/: astparser.cpp  astparser.h  exp_simplify.h  fp_mul_test.cpp  inv_check1.cpp  prop_check1.cpp  solver_test.cpp  symtraverse_all_step1.cpp  symtraverse_all_step2.cpp  symtraverse_all_step3.cpp  symtraverse_all_step4.cpp  test-tac.cpp  test.cpp  unroll-test.cpp
apps/idpv/: 12cycletest.cpp  2cyclemultest.cpp  f32multest.cpp  mul32test.cpp  test.cpp  toptest.cpp  unroll-test.cpp  vfptest.cpp
config/: .gitignore  README.md  testpath.h.in
contrib/: setup-btor2tools.sh  setup-glog.sh  setup-smt-switch.sh  setup-vexpparser.sh
design/idpv-test/: 2cyclemul.btor2  FMUL.scala  FMUL.v  c_mul64.smt2  cmul32.smt2  concat_error.smt2  f32_mul.c  f32_mul.smt2  floatmul.v  floatmul32.v  fp-mul32.c  fp-precision.c  mul.scala  mul64.btor2  mul64.cpp  mul64.v  newmul32.btor2  singlecycle.btor2  singlecycle.v  t1.c  t1c.smt2  t1v.smt2  temp-ilang  vfpmul.btor2  vmul16.btor2  vmul32.btor2
design/idpv-test/guangyu_case/: top.btor2  top.c  top.smt2  top.v
design/idpv-test/mul_prototype/: 2cyclemul.v  singlecycle.v
design/idpv-test/simple_case/: example1.sv  main.v  t1.v  t1c.smt2  t1v.btor2
design/test/: adder.btor2  adder2.btor2  pipe-no-stall.btor2
ext/: inv_group.cpp
framework/: btor2_encoder.cpp  btor2_encoder.h  catbtor  catbtor.c  independence_check.cpp  independence_check.h  inv_group.cpp  inv_group.h  main.c  smt_in.cpp  state_read_write.cpp  state_read_write.h  state_simplify.cpp  state_simplify.h  sygus_simplify.cpp  sygus_simplify.h  symsim.cpp  symsim.h  symtraverse.cpp  symtraverse.h  term_manip.cpp  term_manip.h  tracemgr.cpp  tracemgr.h  traverse_manip.cpp  traverse_manip.h  ts.cpp  ts.h
frontend/: btor2_encoder.cpp  btor2_encoder.h  smt_in.cpp  smt_in.h  state_read_write.cpp  state_read_write.h
output/c1/: .state_sv_234_5.swp  .state_sv_25_4.swp  state_asmpt_0_6  state_asmpt_100_3  state_asmpt_100_6  state_asmpt_101_5  state_asmpt_101_6  state_asmpt_102_4  state_asmpt_102_6  state_asmpt_103_4  state_asmpt_103_5  state_asmpt_103_6  state_asmpt_104_6  state_asmpt_105_6  state_asmpt_106_5  state_asmpt_106_6  state_asmpt_107_5  state_asmpt_107_6  state_asmpt_108_2  state_asmpt_108_4  state_asmpt_108_6  state_asmpt_109_3  state_asmpt_109_5  state_asmpt_109_6  state_asmpt_10_6  state_asmpt_110_5  state_asmpt_110_6  state_asmpt_111_6  state_asmpt_112_5  state_asmpt_112_6  state_asmpt_113_5  state_asmpt_113_6  state_asmpt_114_0  state_asmpt_114_3  state_asmpt_114_5  state_asmpt_114_6  state_asmpt_115_6  state_asmpt_116_6  state_asmpt_117_6  state_asmpt_118_3  (+750 more)
output/c2/: state_asmpt_0_0  state_asmpt_0_1  state_asmpt_0_2  state_asmpt_0_3  state_asmpt_0_4  state_asmpt_0_5  state_asmpt_1_2  state_asmpt_1_3  state_asmpt_1_4  state_asmpt_1_5  state_asmpt_2_1  state_asmpt_2_2  state_asmpt_2_3  state_asmpt_2_4  state_asmpt_2_5  state_asmpt_3_2  state_asmpt_3_3  state_asmpt_3_4  state_asmpt_3_5  state_asmpt_4_1  state_asmpt_4_2  state_asmpt_4_3  state_asmpt_4_4  state_asmpt_4_5  state_sv_0_1  state_sv_0_2  state_sv_0_3  state_sv_0_4  state_sv_1_0  state_sv_1_2  state_sv_1_3  state_sv_1_4  state_sv_2_1  state_sv_2_2  state_sv_2_5  state_sv_3_1  state_sv_3_2  state_sv_3_3  state_sv_3_4  state_sv_4_2  (+1 more)
output/c3/: state_asmpt_0_1  state_asmpt_0_2  state_asmpt_0_3  state_asmpt_0_4  state_asmpt_0_5  state_asmpt_0_6  state_asmpt_0_7  state_asmpt_10_1  state_asmpt_10_2  state_asmpt_10_3  state_asmpt_10_4  state_asmpt_10_5  state_asmpt_10_7  state_asmpt_11_2  state_asmpt_11_3  state_asmpt_11_4  state_asmpt_11_5  state_asmpt_11_6  state_asmpt_11_7  state_asmpt_12_1  state_asmpt_12_3  state_asmpt_12_4  state_asmpt_12_7  state_asmpt_13_1  state_asmpt_13_2  state_asmpt_13_3  state_asmpt_13_4  state_asmpt_13_5  state_asmpt_13_6  state_asmpt_13_7  state_asmpt_14_1  state_asmpt_14_3  state_asmpt_14_4  state_asmpt_14_6  state_asmpt_15_1  state_asmpt_15_2  state_asmpt_15_3  state_asmpt_15_4  state_asmpt_15_5  state_asmpt_15_6  (+177 more)
output/c4/: state_asmpt_0_2  state_asmpt_0_4  state_asmpt_0_5  state_asmpt_0_6  state_asmpt_0_7  state_asmpt_10_2  state_asmpt_10_3  state_asmpt_10_4  state_asmpt_10_7  state_asmpt_11_4  state_asmpt_11_5  state_asmpt_11_6  state_asmpt_11_7  state_asmpt_12_2  state_asmpt_12_3  state_asmpt_12_4  state_asmpt_12_6  state_asmpt_13_3  state_asmpt_13_4  state_asmpt_13_5  state_asmpt_14_2  state_asmpt_14_3  state_asmpt_14_4  state_asmpt_14_5  state_asmpt_15_2  state_asmpt_15_4  state_asmpt_15_5  state_asmpt_15_6  state_asmpt_15_7  state_asmpt_16_3  state_asmpt_16_4  state_asmpt_16_7  state_asmpt_17_4  state_asmpt_17_5  state_asmpt_17_6  state_asmpt_17_7  state_asmpt_18_2  state_asmpt_18_3  state_asmpt_18_4  state_asmpt_18_5  (+414 more)
python/: CMakeLists.txt.bak  CMakeLists2.txt  __init__.py  pywasim.cpp  setup.py.in  wasim.pyx  wasim_imp.pxd  wasim_imp.pxi  wasim_wrapper.cpp
smt-switch/: location.hh  smtlibparser.h
test/python/: pipe.btor2  pipe.v  test.py  tobtor.ys
timed-assertion-checker/: timed_assertion_checker.cpp  timed_assertion_checker.h
utils/: btor2parser.c  exceptions.h  logger.cpp  logger.h  ts.cpp  ts.h  utils.h
